--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -47,12 +47,26 @@
             app:layout_constraintTop_toBottomOf="@id/tv_judul"
             tools:targetApi="o" />
 
+
+        <TextView
+            android:id="@+id/tv_belajar_sekarang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppins_medium"
+            android:text="@string/belajar_sekarang"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi" />
+
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi"
+            app:layout_constraintTop_toBottomOf="@id/tv_belajar_sekarang"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout="@layout/fragment_jilid_pemula" />
 
