--- a/app/src/main/res/layout/activity_dashboard_guru.xml
+++ b/app/src/main/res/layout/activity_dashboard_guru.xml
@@ -124,6 +124,51 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_nilai_siswa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_data_siswa">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_nilai_siswa"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginVertical="12dp"
+                android:layout_marginHorizontal="24dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundedImage"
+                app:srcCompat="@drawable/score" />
+
+            <TextView
+                android:id="@+id/tv_nilai_siswa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="@string/nilai_siswa"
+                android:textColor="?android:textColorPrimary"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@id/iv_nilai_siswa"
+                app:layout_constraintTop_toTopOf="@id/iv_nilai_siswa"
+                app:layout_constraintBottom_toBottomOf="@id/iv_nilai_siswa"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_profil_madrasah"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -132,7 +177,7 @@
         app:cardCornerRadius="12dp"
         app:cardElevation="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_data_siswa">
+        app:layout_constraintTop_toBottomOf="@id/cv_nilai_siswa">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
