--- a/app/src/main/res/layout/activity_add_nilai.xml
+++ b/app/src/main/res/layout/activity_add_nilai.xml
@@ -26,14 +26,23 @@
             android:text="@string/input_name"
             android:textSize="16sp" />
 
-        <Spinner
-            android:id="@+id/spin_nama"
+        <EditText
+            android:id="@+id/et_nama"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
+            android:autofillHints="name"
             android:background="@drawable/lavender_box"
-            android:padding="8dp" />
+            android:drawablePadding="16dp"
+            android:drawableTint="@color/lavender_dark"
+            android:hint="@string/input_name"
+            android:inputType="textPersonName"
+            android:maxLines="1"
+            android:paddingHorizontal="16dp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="16sp"
+            tools:targetApi="m" />
 
         <TextView
             android:layout_width="match_parent"
