--- a/app/src/main/res/layout/activity_detail_progress.xml
+++ b/app/src/main/res/layout/activity_detail_progress.xml
@@ -20,14 +20,21 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:targetApi="o" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_pages"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_judul"
-        tools:listitem="@layout/item_row_page" />
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_pages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="32dp"
+            tools:listitem="@layout/item_row_page" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
